--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,6 +30,7 @@ services:
   mysql:
     image: mysql:8.0
     container_name: citas-medicas-mysql
+    command: --default-authentication-plugin=mysql_native_password
     ports:
       - "3306:3306"
     
